--- a/Phoenella/pom.xml
+++ b/Phoenella/pom.xml
@@ -105,6 +105,12 @@
             <artifactId>Pterodactyl4J</artifactId>
             <version>2.BETA_117</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.3</version>
+        </dependency>
     </dependencies>
 
 </project>
