--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -10,4 +10,4 @@ liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
-custom: 'https://www.paypal.com/donate?hosted_button_id=R5D34PSWKJY88'
+custom: 'https://www.paypal.com/donate/?business=2RN8VW6LS9XYS&no_recurring=0&currency_code=USD'
