--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ AirCheck/air.json
 AirCheck/pollen.json
 AirCheck/src/main/java/me/jasonhorkles/aircheck/Secrets.java
 MCB/src/main/java/me/jasonhorkles/mcb/Secrets.java
+MusicDaddy/Outro Song.mp3
+MusicDaddy/Outro Song 2.mp3
+MusicDaddy/Outro Song 3.mp3
 MusicDaddy/Shutting Down.mp3
 MusicDaddy/src/main/java/me/jasonhorkles/musicdaddy/Secrets.java
 Phoenella/channel-blacklist.txt
