Update method name

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 */target
 .idea
+AirCheck/activities.json
 AirCheck/air.json
 AirCheck/pollen.json
 AirCheck/src/main/java/me/jasonhorkles/aircheck/Secrets.java
