--- a/Silverstone/pom.xml
+++ b/Silverstone/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>JDA</artifactId>
             <version>5.0.0-alpha.20</version>
         </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.12.0</version>
+        </dependency>
     </dependencies>
 
 </project>
