--- a/Silverstone/pom.xml
+++ b/Silverstone/pom.xml
@@ -93,6 +93,12 @@
             <artifactId>joda-time</artifactId>
             <version>2.12.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230618</version>
+        </dependency>
     </dependencies>
 
 </project>
