--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .idea
 AirCheck/activities.json
 AirCheck/air.json
-AirCheck/pollen.json
+AirCheck/pollen.txt
 AirCheck/src/main/java/me/jasonhorkles/aircheck/Secrets.java
 MCB/src/main/java/me/jasonhorkles/mcb/Secrets.java
 MusicDaddy.zip
