Change musicdaddy to musicmommy

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ AirCheck/air.json
 AirCheck/pollen.txt
 AirCheck/src/main/java/me/jasonhorkles/aircheck/Secrets.java
 MCB/src/main/java/me/jasonhorkles/mcb/Secrets.java
-MusicDaddy.zip
+MusicMommy.zip
 Phoenella/channel-blacklist.txt
 Phoenella/dictionarytest.json
 Phoenella/Shush Data
