--- a/Phoenella/pom.xml
+++ b/Phoenella/pom.xml
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>5.0.0-beta.24</version>
+            <version>5.0.0</version>
         </dependency>
 
         <dependency>
@@ -109,12 +109,6 @@
             <groupId>com.mattmalec</groupId>
             <artifactId>Pterodactyl4J</artifactId>
             <version>2.BETA_140</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>5.0.0-alpha.14</version>
         </dependency>
 
         <dependency>
