--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ AirCheck/activities.json
 AirCheck/air.json
 AirCheck/pollen.txt
 AirCheck/src/main/java/me/jasonhorkles/aircheck/Secrets.java
-MCB/src/main/java/me/jasonhorkles/mcb/Secrets.java
+MCB.zip
 MusicMommy.zip
 Phoenella/channel-blacklist.txt
 Phoenella/dictionarytest.json
