--- a/StormAlerts/pom.xml
+++ b/StormAlerts/pom.xml
@@ -105,6 +105,12 @@
             <artifactId>java-diff-utils</artifactId>
             <version>4.12</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.socket</groupId>
+            <artifactId>socket.io-client</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
 </project>
