--- a/Phoenella/pom.xml
+++ b/Phoenella/pom.xml
@@ -74,12 +74,14 @@
     </build>
 
     <repositories>
+        <!-- JDA -->
         <repository>
             <id>dv8tion</id>
             <name>m2-dv8tion</name>
             <url>https://m2.dv8tion.net/releases</url>
         </repository>
 
+        <!-- Pterodactyl4J -->
         <repository>
             <id>mattmalec-repo</id>
             <url>https://repo.mattmalec.com/repository/releases</url>
@@ -90,31 +92,25 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>5.2.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sedmelluq</groupId>
-            <artifactId>lavaplayer</artifactId>
-            <version>1.3.78</version>
+            <version>5.3.2</version>
         </dependency>
 
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.17.2</version>
+            <version>1.19.1</version>
         </dependency>
 
         <dependency>
             <groupId>com.mattmalec</groupId>
             <artifactId>Pterodactyl4J</artifactId>
-            <version>2.BETA_140</version>
+            <version>2.BETA_142</version>
         </dependency>
 
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20240303</version>
+            <version>20250107</version>
         </dependency>
     </dependencies>
 
