--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ AirCheck/activities.json
 AirCheck/air.json
 AirCheck/pollen.txt
 AirCheck/src/main/java/me/jasonhorkles/aircheck/Secrets.java
+Booper/Data
+Booper/Messages
 Booper/src/main/java/me/jasonhorkles/booper/Secrets.java
 FancyFriend.zip
 MCB.zip
